# coord

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmark/: README.md  cleanup-benchmark-data.sh  run.sh
benchmark/coord-bench/: Cargo.toml
coord/: Cargo.toml
coord-agent/: Cargo.toml
coord-agent/src/: cache.rs  config_watcher.rs  discovery.rs  feature_flags.rs  health.rs  key_util.rs  lib.rs  metrics.rs  pki.rs  proxy.rs  saga.rs  service.rs  threadpool.rs  tls.rs
coord-agent/src/auth/: bootstrap.rs  circuit_breaker.rs  interceptor.rs  mod.rs  rate_limiter.rs  role_cache.rs  sync.rs
coord-agent/src/services/: cache.rs  circuit_breaker.rs  config_center.rs  event_notification.rs  grpc_handlers.rs  idgen.rs  leader_election.rs  lock.rs  mod.rs  mq.rs  opa.rs  policy.rs  rate_limiter.rs  registry.rs  replication.rs  scheduler.rs  transit.rs  workflow.rs
coord-agent/tests/: agent_auth_integration_test.rs  agent_cache_service_test.rs  agent_cache_test.rs  agent_cloudevents_test.rs  agent_config_watcher_test.rs  agent_feature_flags_test.rs  agent_grpc_test.rs  agent_health_test.rs  agent_keyutil_test.rs  agent_moka_test.rs  agent_mq_test.rs  agent_opa_test.rs  agent_pki_test.rs  agent_policy_test.rs  agent_replication_test.rs  agent_resilience_test.rs  agent_saga_test.rs  agent_scheduler_test.rs  agent_skeleton_test.rs  agent_threadpool_test.rs  agent_tls_test.rs  agent_transit_test.rs  agent_workflow_test.rs
coord-client/: Cargo.toml
coord-client/src/: client.rs  config.rs  leader.rs  lib.rs  pool.rs  retry.rs  route_cache.rs
coord-client/tests/: dual_mode_test.rs  integration_test.rs
coord-core/: Cargo.toml
coord-core/src/: discovery.rs  error.rs  lib.rs  region.rs  storage.rs  types.rs
coord-core/tests/: cct_perf_bench.rs  discovery_trait_test.rs  region_key_encoding_test.rs  region_types_test.rs
coord-java-sdk/: pom.xml
coord-macros/: Cargo.toml
coord-macros/src/: lib.rs
coord-macros/tests/: macro_tests.rs
coord-proto/: Cargo.toml  build.rs
coord-proto/src/: lib.rs
coord-server/: Cargo.toml  build.rs
coord-server/src/: health.rs  lib.rs  metrics.rs  tls.rs
coord-server/src/auth/: capability.rs  interceptor.rs  manager.rs  mod.rs  revocation.rs  service.rs  token.rs  token_signing.rs
coord-server/src/bff/: config_api.rs  internal.rs  mod.rs  proxy.rs  registry_api.rs  static_files.rs
coord-server/src/lease/: mod.rs
coord-server/src/pd/: meta_store.rs  mod.rs  operator.rs  scheduler.rs  types.rs
coord-server/src/raft/: log_store.rs  mod.rs  network.rs  region.rs  state_machine.rs  type_config.rs
coord-server/src/security/: barrier.rs  key_management.rs  mod.rs  seal.rs
coord-server/src/server/: mod.rs
coord-server/src/storage/: compaction.rs  mod.rs  mvcc.rs  redb_backend.rs  snapshot.rs  snapshot_limiter.rs  snapshot_scheduler.rs  write_batcher.rs
coord-server/src/timer/: mod.rs
coord-server/src/txn/: mod.rs
coord-server/src/watch/: mod.rs
coord-server/tests/: chaos_test.rs  jepsen_test.rs  pd_test.rs  region_manager_test.rs  split_merge_test.rs  write_batcher_test.rs
coord-spring-boot-starter/: pom.xml
coord-test/: Cargo.toml
coord-test/src/: generator.rs  lib.rs  mock.rs
coord-ui/: index.html  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
coord-ui/e2e/: auth.spec.ts  (+2 more)
coord/src/: commands.rs  config.rs  main.rs
coord/tests/: agent_proxy_test.rs  agent_watch_test.rs  cli_agent_test.rs  cluster_test.rs  dev_mode_test.rs  e2e_test.rs  perf_bench.rs  soak_test.rs
crates/coord/: Cargo.toml
crates/coord-client/: Cargo.toml
crates/coord-client/src/: agent.rs  cli.rs  gossip.rs  health.rs  main.rs  proxy.rs
crates/coord-server/: Cargo.toml
crates/coord-server/src/: cli.rs  http_api.rs  main.rs  persistence.rs  raft_internal.rs  raft_runtime.rs  raft_store.rs  services.rs  telemetry.rs  workflow_adapters.rs
crates/coord-server/src/application/: config_app.rs  lock_app.rs  mod.rs  pki_app.rs  transit_app.rs
crates/coord-server/src/http_api/: auth.rs  config_http.rs  transit_http.rs  ui.rs
crates/coord-server/src/raft_runtime/: helpers.rs  membership.rs  persistence_ops.rs  replication.rs  role.rs
crates/coord-server/src/services/: admin.rs  auth.rs  config.rs  idgen.rs  lock.rs  registry.rs  seal.rs  workflow.rs
crates/coord-server/src/wire/: mod.rs  raft.rs
crates/coord-server/tests/: backup_restore.rs  error_contract.rs  raft_election.rs  seal_unseal.rs  tls_transport.rs  watch_keepalive.rs
crates/coord/src/: cli.rs  http_api.rs  interceptors.rs  main.rs  persistence.rs  raft_runtime.rs  raft_store.rs  services.rs
crates/coord/src/application/: mod.rs
crates/coord/src/client/: agent.rs  gossip.rs  health.rs  mod.rs  proxy.rs
crates/coord/src/ctl/: mod.rs
crates/coord/src/http_api/: audit.rs  cluster.rs  console_roles.rs  error.rs  helpers.rs  lock_http.rs  pki_http.rs  registry_http.rs  security_http.rs
crates/coord/src/modes/: all.rs  client.rs  mod.rs  server.rs
crates/coord/src/raft_runtime/: election.rs  persistence_ops.rs  replication.rs
crates/coord/src/services/: auth.rs  helpers.rs  idgen.rs  lock.rs  pki.rs  policy.rs  registry.rs  seal.rs  transit.rs  workflow.rs
crates/coord/src/wire/: error.rs  mod.rs  raft.rs
doc/: 01-quick-start.md  02-installation.md  03-deploy-docker.md  04-deploy-cluster.md  05-server-config.md  06-ctl.md  07-security.md  08-transit-pki.md  09-tls.md  10-testing.md  11-policy.md
docker/: Dockerfile  Dockerfile.release  README.md  docker-compose.cluster.yml  docker-compose.dev.yml
e2e/: .dockerignore  Makefile  TESTING-CI.md  TESTING-CLUSTER.md  TESTING-FAST.md  docker-compose.override.yml  docker-compose.tls.yml  docker-compose.yml
java-example/: pom.xml
scripts/: README.md  bench-release.sh  changelog-check.sh  ci-guardrails.sh  docker-push.sh  release.sh
(+276 files in other folders)
