[workspace]
resolver = "2"
members = [
    "crates/coord-server",
    "crates/coord-ctl",
    "benchmark/coord-bench",
]

[workspace.package]
version = "0.1.10"
edition = "2024"
license = "Apache-2.0"
authors = ["Byteforce <byteforce@qq.com>"]
repository = "https://github.com/byteforce-cn/coord"
rust-version = "1.93.0"

# ---------------------------------------------------------------------------
# 公开 coord 项目依赖基线
#
# coord-core / coord-proto 由 private/rust-libs 维护并发布到 Byteforce 私有
# Cargo registry（byteforce，索引地址：
# https://nexus.byteforce.cn/repository/cargo-repo/）。
#
# 本工作区不允许出现指向 private/ 的 path dependency。新增依赖必须在此处
# 集中登记，禁止使用 "*" 或 "latest"。版本基线遵循
# .github/instructions/sdk-versions.instructions.md。
# ---------------------------------------------------------------------------
[workspace.dependencies]
# 私有 registry 上的 coord 内部 crate
coord-core = { version = "0.1.1", registry = "byteforce" }
coord-proto = { version = "0.1.1", registry = "byteforce" }

# 基础
anyhow = "1.0"
async-trait = "0.1"
async-recursion = "1"
bytes = "1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.11", features = ["v4"] }

# 安全 / 加密
aes-gcm = "0.10"
base64 = "0.22"
hmac = "0.12"
rand = "0.8"
rcgen = "0.13"
sha2 = "0.10"
sharks = "0.5"
zeroize = { version = "1.8", features = ["derive"] }

# HTTP / gRPC / 服务端栈
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
clap = { version = "4.5", features = ["derive", "env"] }
http = "1"
http-body-util = "0.1"
prometheus = "0.13"
prost = "0.13"
prost-types = "0.13"
rustls = { version = "0.23", features = ["ring"] }
tonic = { version = "0.12", features = ["transport", "tls"] }
tower = { version = "0.4", features = ["util"] }

# 共识 / 存储
openraft = { version = "0.10.0-alpha.17", features = ["serde"] }
redb = "2.6.3"

[workspace.lints.clippy]
# 生产代码不得在 #[cfg(test)] 之外使用 unwrap/expect/panic。
# 例外必须显式 #[allow(...)] 并附 SAFETY 注释。
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 1
