[package]
name = "coord-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
coord-proto = { workspace = true }
coord-core = { workspace = true }
coord-client = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
lru = { workspace = true }
thiserror = { workspace = true }
moka = { workspace = true }
async-trait = { workspace = true }
redb = { workspace = true }
rand = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }
hex = { workspace = true }
rcgen = "0.14"
x509-parser = "0.17"
time = "0.3"
base64 = "0.22"
regorus = "0.10.1"

[dev-dependencies]
coord-server = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
rcgen = "0.14"
