[package]
name = "coord-client"
version = "0.1.0"
edition = "2021"

[dependencies]
coord-proto = { workspace = true }
coord-core = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
coord-server = { workspace = true }
tempfile = { workspace = true }
openraft = { workspace = true }
tonic = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
tokio-stream = { workspace = true }
