[package]
name = "coord-server"
version = "0.1.0"
edition = "2021"

[dependencies]
coord-core = { workspace = true }
coord-proto = { workspace = true }

tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
redb = { workspace = true }
openraft = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
tokio-stream = { workspace = true }

# 安全层（P2）
aes-gcm = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
lru = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }

# BFF 层（UI 控制台代理）
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
rust-embed = { workspace = true }

[dev-dependencies]
tempfile = "3"
