[package]
name = "coord"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coord"
path = "src/main.rs"

[dependencies]
coord-server = { workspace = true }
coord-client = { workspace = true }
coord-agent = { workspace = true }
coord-core = { workspace = true }
coord-proto = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
openraft = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
tokio-stream = "0.1"
toml = { workspace = true }
rand = { workspace = true }
rpassword = "7.3"
axum = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
