[package]
name = "coord-client"
version = "0.1.0"
edition = "2024"
description = "Coord 客户端代理：AP 发现缓存 + Gossip 成员管理 + CP 透传"

[[bin]]
name = "coord-client"
path = "src/main.rs"

[dependencies]
# coord 内部 crate
coord-core = { workspace = true }
coord-proto = { workspace = true }

# 基础
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

# CLI
clap = { workspace = true }

# gRPC（透传 CP 操作到 coord-server）
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Gossip 成员发现
chitchat = { workspace = true }
dashmap = { workspace = true }
