[package]
name = "coord-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
rustls = { workspace = true }
clap = { workspace = true }
coord-core = { workspace = true }
coord-proto = { workspace = true }
futures = { workspace = true }
openraft = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }

[features]
workflow-preview = []
