[package]
name = "coord"
version.workspace = true
edition.workspace = true

[[bin]]
name = "coord"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chitchat = { workspace = true }
clap = { workspace = true }
coord-core = { workspace = true }
coord-proto = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
openraft = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
redb = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }

[features]
workflow-preview = []
